# emne

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  rustfmt.toml
settings/: development.example.toml  production.example.toml
src/: config.rs  lib.rs  main.rs  router.rs  utils.rs
src/utils/: gracefully_shutdown.rs  tracing_setup.rs
