[package]
name = "emne"
version = "0.1.0"
edition = "2024"
authors = ["Rc <yilinw6@gmail.com>"]
license = "MIT"
description = "A experimental Email Newsletter Engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
thiserror = "2"
time = { version = "0.3", features = ["macros", "local-offset", "parsing"] }
itertools = "0.14"

# axum libs
axum = { version = "0.8" }
axum-macros = "0.5"
axum-extra = { version = "0.12", features = ["typed-header"] }
headers = "0.4"

[dev-dependencies]
pretty_assertions = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
